<resources>
    <string name="app_name">Foodie</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="recipe_fragment_label">Recipes</string>
    <string name="favourite_fragment_label">Favourites</string>
    <string name="joke_fragment_label">Food Jokes</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_recipe_fragment">Hello recipe fragment</string>
    <string name="hello_favourite_fragment">Hello favourite fragment. Arg: %1$s</string>
    <string name="hello_joke_fragment">Hello Joke fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="food_jokes">Food Jokes</string>
    <string name="recipe">Recipe</string>
    <string name="error_message">Oh! Please check your internet.</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="recipe_title">Ankara ati Eko Elewe</string>
    <string name="_30">30 mins</string>
    <string name="vegan">Vegan</string>
    <string name="_100">100</string>
    <string name="floatingicon">floatingIcon</string>
    <string name="nothing">nothing</string>
</resources>